--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [nosetests]
 detailed-errors=1
 with-xunit=1
-with-coverage=1
+with-xcoverage=1
 cover-package=staldates
 cover-inclusive=1
 cover-erase=1
