Don't try and take() before an extras input has been selected.

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>av-control</name>
 	<comment></comment>
 	<projects>
+		<project>avx-git</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
