--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
+sudo: required
 language: python
 python:
   - "2.7"
+before_install:
+  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1024x800x16"
 install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y python-pyside
   - pip install coveralls
 script:
   coverage run --source=staldates setup.py nosetests
