--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,13 @@ addons:
   apt:
     packages:
       - libqt4-dev
+      - pyside-tools
 install:
   - pip install PySide --no-index --find-links https://parkin.github.io/python-wheelhouse/
   - python ~/virtualenv/python${TRAVIS_PYTHON_VERSION}/bin/pyside_postinstall.py -install
   - pip install coveralls
 script:
-  coverage run --source=staldates setup.py nosetests
+  - ./compileResources.sh
+  - coverage run --source=staldates setup.py nosetests
 after_success:
   coveralls
